--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "type": "module",
+  "scripts": {
+    "patch": "patch-package",
+    "start": "node main.js",
+    "unpatch": "patch-package --reverse"
+  },
   "dependencies": {
     "socket.io": "4.7.5",
     "socket.io-client": "4.7.5",
     "uWebSockets.js": "github:uNetworking/uWebSockets.js#v20.44.0"
   },
   "devDependencies": {
-    "engine.io": "6.6.0"
+    "engine.io": "6.6.0",
+    "patch-package": "8.0.0"
+  },
+  "overrides": {
+    "socket.io": {
+      "engine.io": "$engine.io"
+    }
   },
   "prettier": {
     "singleQuote": true,
